# azure-stt-sample

./: .env.example  .gitignore  LICENCE  README.md  main.py  pyproject.toml
